--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.9.55/css/materialdesignicons.min.css">
+  <script src="https://kit.fontawesome.com/43f8c0895b.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
   <title> Site Clone</title>
 </head>
@@ -29,25 +30,25 @@
   <main>
 
     <div class=" container-fluid flex-wrap">
-      <div class="row bg-main-blue pl-4 pr-3 pt-2">
+      <div class="row bg-main-blue p-5">
         <div class="col-lg-3">
-          <div class="text-center font-size-xxx-large">
-            <i class=" mdi-48px mdi mdi-pencil-box text-white "></i>
+          <div class="text-center font-color-orange">
+            <i class="fas fa-edit fa-7x"></i>
           </div>
         </div>
         <div class="col-lg-3">
-          <div class="text-center font-size-xxx-large">
-            <i class=" mdi-48px mdi mdi-pencil-box text-white "></i>
+          <div class="text-center font-color-orange">
+            <i class="fas fa-tablet-alt fa-7x"></i>
           </div>
         </div>
         <div class="col-lg-3">
-          <div class="text-center font-size-xxx-large">
-            <i class=" mdi-48px mdi mdi-pencil-box text-white "></i>
+          <div class="text-center font-color-orange">
+            <i class="fab fa-uncharted fa-7x"></i>
           </div>
         </div>
         <div class="col-lg-3">
-          <div class="text-center font-size-xxx-large">
-            <i class=" mdi-48px mdi mdi-pencil-box text-white "></i>
+          <div class="text-center font-color-orange">
+            <i class="fas fa-database fa-7x"></i>
           </div>
         </div>
       </div>
@@ -60,20 +61,22 @@
         </div>
         <div class="col-lg-3 text-center">
           <div class="tm-6 text-white">
-            <h2>Natural writing</h2>
-            <p class="text-break">Don't change your habits, write with a pen <b>on paper notebooks</b></p>
+            <h2>Sync. copy</h2>
+            <p class="text-break">Stylys instantaneously copies your text on your computer. <b>in real-time</b></p>
           </div>
         </div>
         <div class="col-lg-3 text-center">
           <div class="tm-6 text-white">
-            <h2>Natural writing</h2>
-            <p class="text-break">Don't change your habits, write with a pen <b>on paper notebooks</b></p>
+            <h2>Analytics</h2>
+            <p class="text-break">Get feedback on the way you write, <b>your favorite words, your frequent mistakes</b>
+            </p>
           </div>
         </div>
         <div class="col-lg-3 text-center">
           <div class="tm-6 text-white">
-            <h2>Natural writing</h2>
-            <p class="text-break">Don't change your habits, write with a pen <b>on paper notebooks</b></p>
+            <h2>Storing your texts</h2>
+            <p class="text-break">Everything written with your stylus is stored in the cloud, so that <b>it's never
+                lost</b></p>
           </div>
         </div>
       </div>
