altered top image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <header>
     <div class=" header container-fluid flex-wrap">
-      <div class="row bg-main-image p-5">
+      <div class="row bg-main-image p-5 mb-5">
         <div class="col-lg-6 pt-5 pb-5 m-auto flex-wrap">
           <h1 class="text-white m-15rem">Styl.us</h1>
           <p class="text-white">Turn your pen into your best friend</p>
